--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.11",
@@ -23,8 +24,10 @@
     "lucide-react": "^0.555.0",
     "motion": "^12.23.24",
     "ogl": "^1.0.11",
+    "otp-input-react": "^0.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
     "react-toastify": "^11.0.5",
